# syncstage

./: .gitignore  LICENSE  README.md  pyproject.toml
.cache/: syncstage-translate.json
examples/: syncstage.config.json
syncstage/: __init__.py  cli.py  config.py  fs.py  ignore.py  translate.py  utils.py
syncstage/commands/: __init__.py  clean.py  dedupe.py  mirror.py  organize.py  rename.py  scan.py  verify.py
tests/: __init__.py  conftest.py  test_smoke.py
